<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Global -->
    <string name="app_name">Amicale INSA</string>

    <!-- Title -->
    <string name="title_home">Home</string>
    <string name="title_washinsa">WashINSA</string>
    <string name="title_chat">Chat</string>
    <string name="title_preferences">Setting</string>

    <!-- Navigation -->
    <string name="nav_home">Home</string>
    <string name="nav_washinsa">WashINSA</string>
    <string name="nav_chat">Chat</string>
    <string name="nav_timetable">Planex</string>
    <string name="nav_other">Other</string>
    <string name="nav_preferences">Settings</string>

    <!-- WashINSA -->
    <string name="washinsa_category_drying">Dryers</string>
    <string name="washinsa_category_washing">Washing machines</string>
    <string name="washinsa_machine_state_free">Free</string>
    <string name="washinsa_machine_state_disused">Disused</string>
    <string name="washinsa_machine_state_unknown">Unknown state</string>
    <string name="washinsa_machine_state_finished">Finished</string>
    <plurals name="washinsa_machine_state_running">
        <item quantity="zero">Available in less than one minute</item>
        <item quantity="one">Available in %d minute</item>
        <item quantity="other">Available in %d minutes</item>
    </plurals>
    <string name="washinsa_alarm_create_dialog_title">Notice me&#8230;</string>
    <string name="washinsa_alarm_create_dialog_content">minutes before the end.</string>
    <string name="washinsa_alarm_create_dialog_cancel">Cancel</string>
    <string name="washinsa_alarm_create_dialog_create">Add alarm</string>
    <string name="washinsa_alarm_notification_title">WashINSAlarm</string>
    <string name="washinsa_alarm_notification_content" formatted="false">Machine n°%d: alarm at %d:%02d</string>
    <string name="washinsa_alarm_stop_dialog_title">WashINSAlarm</string>
    <string name="washinsa_alarm_stop_dialog_content_sentence_start" formatted="false">The machine n°%d</string>
    <plurals name="washinsa_alarm_stop_dialog_content_sentence_end">
        <item quantity="zero">is finished!</item>
        <item quantity="one">ends in %d minute!</item>
        <item quantity="other">ends in %d minutes!</item>
    </plurals>
    <string name="washinsa_alarm_stop_dialog_neutral">Stop alarm</string>
    <string name="washinsa_alarm_cancel_dialog_title">WashINSAlarm</string>
    <string name="washinsa_alarm_cancel_dialog_content">Do you want to cancel the alarm?</string>
    <string name="washinsa_alarm_cancel_dialog_negative">No</string>
    <string name="washinsa_alarm_cancel_dialog_positive">Yes</string>
    <string name="adapter_washinsa_alarm_content_description">Add alarm</string>

    <string name="alarm_player_toast_media_player_error">Your alarm sound was unavailable.</string>

    <!-- Chat -->
    <string name="chat_input_hint">New message</string>
    <string name="chat_button_send_description">Send</string>
    <string name="chat_image_preview_description">Picture attached</string>
    <string name="chat_button_clear_picture_description">Remove the picture</string>
    <string name="chat_button_take_picture_description">Attach a picture</string>
    <string name="adapter_chat_message_image_description">Picture attached</string>
    <string name="chat_dialog_sending_image_content">Uploading the image&#8230;</string>
    <string name="chat_dialog_on_send_image_failed">Image not send! :(</string>
    <string name="chat_typing_indicator">Someone is writing&#8230;</string>

    <!-- News -->
    <string name="adapter_article_image_description">Picture attached</string>

    <!-- General Error message -->
    <string name="loading_error_message">Cannot load&#8230;</string>

    <!-- Preferences -->
    <string name="prefs_category_chat_title">Chat</string>
    <string name="prefs_chat_nickname_key">chat_nickname</string>
    <string name="prefs_chat_nickname_title">Nickname</string>
    <string name="prefs_chat_nickname_summary">Your name used in the chat.</string>
    <string name="prefs_chat_nickname_dialog_title">Nickname for the chat</string>
    <string name="prefs_chat_nickname_default_value">invite</string>

    <string name="prefs_category_other_title">Other</string>
    <string name="prefs_notification_key" translatable="false">enable_notifications</string>
    <string name="prefs_notification_title">Enable notifications</string>
    <bool name="prefs_notification_default_value">true</bool>

    <!-- Planex -->
    <string name="planex_dialog_title">Planex!</string>
    <string name="planex_dialog_message">Beautiful, simple and efficient! Planex is the best app to get your timetable in one click. It includes a widget for your lock screen.</string>
    <string name="planex_cancel_button">Back</string>
    <string name="planex_install_button">I want it now!</string>
    <string name="planex_package_name" translatable="false">com.pijodev.insatpe</string>

    <!-- Navigation header -->
    <string name="navigation_header_email" translatable="false">amicale@amicale-insat.fr</string>

    <string name="navigation_drawer_open">Open navigation</string>
    <string name="navigation_drawer_close">Close navigation</string>

    <!-- Image picker -->
    <string name="image_picker_title">Choose an image</string>
    <string name="image_picker_error">Invalid input image! :(</string>

    <!-- Dialog set nickname -->
    <string name="nickname_dialog_title">Set your nickname!</string>
    <string name="nickname_dialog_message">Your current name is %s. Do you want to change it?</string>
    <string name="nickname_cancel_button">Later</string>
    <string name="nickname_go_button">Settings</string>

</resources>
