<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/prefs_category_chat_title">

        <!-- dialog_based_preferences -->
        <EditTextPreference
            android:key="@string/prefs_chat_nickname_key"
            android:title="@string/prefs_chat_nickname_title"
            android:summary="@string/prefs_chat_nickname_summary"
            android:dialogTitle="@string/prefs_chat_nickname_dialog_title"
            android:defaultValue="@string/prefs_chat_nickname_default_value"
            android:inputType="textPersonName"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/prefs_category_other_title">
        <CheckBoxPreference
            android:key="@string/prefs_notification_key"
            android:title="@string/prefs_notification_title"
            android:defaultValue="@string/prefs_notification_default_value"/>
    </PreferenceCategory>

</PreferenceScreen>